Changelog for plone.app.vocabularies

    (name of developer listed in brackets)

plone.app.vocabulary - 1.0.2 Released December 24, 2007

    - Fixed invalid context argument passed into the translation machinery in
      the workflow state vocabulary. This fixes
      http://dev.plone.org/plone/ticket/7492.
      [hannosch]

    - Added optional default query string to searchable text source.
      [fschulze]

    - Correct name for attributes.
      [wichert]

plone.app.vocabulary - 1.0.1 Released August 17, 2007

    - Fixed catalog vocabulary when dealing with the degenerate-case of
      an empty value. This makes it work better with the UberSelectionWidget.
      [optilude]

    - Made catalog vocabulary less fragile for simple/short queries.
      [optilude]

plone.app.vocabularies - 1.0 Released August 14, 2007

    - Fixed ReallyUserFriendlyTypesVocabulary to include the Messages for
      type names. This refs http://dev.plone.org/plone/ticket/6911.
      [hannosch]

plone.app.vocabularies - 1.0rc3 Released July 28, 2007

    - Fixed missing history.
      [hannosch]

plone.app.vocabularies - 1.0rc2 Released July 27, 2007

    - Fixed to return localized workflow state names.
      [deo]

plone.app.vocabularies - 1.0rc1 Released July 9, 2007

    - Added new ReallyUserFriendlyTypes and a BAD_TYPES list, which are used
      to filter out types which are not content types at all.
      [hannosch]

    - Added new AvailableContentLanguages and SupportedContentLanguages
      vocabularies.
      [hannosch]

    - If we have a users vocabulary, we should have a groups one :)
      [optilude]

    - Make use of description-aware terms
      [optilude]

    - Allow parameterisation of the query, so that we can restrict to
      folders-only, for example.
      [optilude]

    - Add a user source, so that we can use the UberSelectionWidget on users.
      [optilude]

plone.app.vocabularies - 1.0b3 Released May 1, 2007

    - Back to getToolByName we go.